# Blog_project

./: .env.docker  .env.docker.template  .env.template  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
actions/: create_supersuer.py
alembic/versions/: 2025_05_03_1737-8c4f0bae413f_initial_migration.py
api/: __init__.py  analysis.py  auth.py  router_imports.py
api/dependencies/authentication/: fastapi_users.py  user_manager.py
api/repositories/: base_repository.py  categories_repository.py  comments_repository.py  posts_repository.py  reactions_repository.py  tags_repository.py  users_repository.py
api/routers/: categories_router.py  comments_router.py  insert_superuser.py  posts_router.py  reactions_router.py  tags_router.py  users_router.py
api/scheduling/: celery_worker.py  redis_test.py
api/services/: base_service.py  categories_service.py  comments_service.py  posts_service.py  reactions_service.py  tags_service.py  users_service.py
core/: config.py
core/authentication/: transport.py
core/models/: __init__.py  db_helper.py
core/schemas/: comment.py  post.py  reaction.py  tag.py  user.py
test/: conftest.py
test/inserts/: admin_insert.py  all_models_insert.py  categories_insert.py  comments_insert.py  posts_categories_insert.py  posts_insert.py  posts_tags_insert.py  reaction_to_comment_insert.py  reactions_inserts.py  tags_inserts.py  users_inserts.py  votes_insert.py
test/int_test/: categories_test.py  comments_test.py  posts_test.py  reactions_test.py  tags_test.py  users_test.py
utils/: case_converter.py
(+13 files in other folders)
