[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.6"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
pydantic = {extras = ["email"], version = "^2.10.3"}
pydantic-settings = "^2.7.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
asyncpg = "^0.30.0"
alembic = "^1.14.0"
black = "^24.10.0"
orjson = "^3.10.12"
psycopg2 = "^2.9.10"
psycopg2-binary = "^2.9.10"
fastapi-users-db-sqlalchemy = "^7.0.0"
fastapi-users = {extras = ["sqlalchemy"], version = "^14.0.1"}
python-jose = {extras = ["cryptography"], version = "^3.4.0"}
celery = "^5.5.1"
redis = "^5.2.1"
flower = "^2.0.1"
pytest-asyncio = "^0.26.0"
passlib = "^1.7.4"
aioredis = "1.3.1"
fastapi-cache = "^0.1.0"
fastapi-cache2 = "^0.2.2"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
httpx = "^0.28.1"

